# Git-Merge-Conflicts-CS425

./: CMakeLists.txt  README.md  fish_4.0.8.orig.tar.xz  instructions.typ  works.bib
fish-4.0.8/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  fish.pc.noversion
fish-4.0.8/share/: __fish_build_paths.fish
fish-4.0.8/user_doc/man/man1/: _.1  abbr.1  alias.1  and.1  argparse.1  begin.1  bg.1  bind.1  block.1  break.1  breakpoint.1  builtin.1  case.1  cd.1  cdh.1  command.1  commandline.1  complete.1  contains.1  continue.1  count.1  dirh.1  dirs.1  disown.1  echo.1  else.1  emit.1  end.1  eval.1  exec.1  exit.1  export.1  false.1  fg.1  fish-completions.1  fish-doc.1  fish-faq.1  fish-for-bash-users.1  fish-interactive.1  fish-language.1  (+92 more)
src/: config.hpp  main.cpp  math.cpp  math.hpp
tests/: test.cpp
